--- a/src/styles/_projectcard.scss
+++ b/src/styles/_projectcard.scss
@@ -70,11 +70,11 @@
     }
 
 
-    .imageContainer {
+    .projectImageContainer {
         position: absolute;
       }
       
-      .imageContainer::before {
+      .projectImageContainer::before {
         position: absolute;
         top: -3%;
         left: -2%;
