--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -1,13 +1,13 @@
 
 .projects {
     @include page($mainBG, column, 100vh, auto);
-    overflow:hidden;
     padding-left: 0%;
-    .topServices {
-      margin: 0 10%;
+    .topProjects {
+      width: 100%;
+      padding: 0 8%;
       display: flex;
-      flex-direction: column;
       align-self: flex-start;
+      justify-content: space-between;
     }
     .title {
       text-align: left;
@@ -32,18 +32,16 @@
       top: 125px;
       left: -2px;
     }
-    .topProjects {
-        display: flex;
-    }
     button {
-        @include button($accent2,white);
-        margin: 35px;
-        padding: 20px 40px;
-        align-self: flex-end;
+      @include button($accent2,white);
+      margin: 35px;
+      padding: 20px 40px;
+      align-self: flex-end;
     }
     .projectCardContainer {
-        display: flex;
-        flex-direction: row;
-        padding-left: 25%;
+      display: flex;
+      flex-direction: row;
+      padding-left: 25%;
     }
-}
+    overflow:hidden;
+  }
